--- a/sass/style.css
+++ b/sass/style.css
@@ -1,45 +1,194 @@
+/* open-sans-regular - latin */
 @font-face {
-  font-family: opensans-regular;
-  src: url("../resources/fonts/OpenSans-Regular.ttf");
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: url("../resources/fonts/open-sans-v20-latin-regular.eot");
+  /* IE9 Compat Modes */
+  src: url("../resources/fonts/open-sans-v20-latin-regular.eot?#iefix") format("embedded-opentype"), url("../resources/fonts/open-sans-v20-latin-regular.woff2") format("woff2"), url("../resources/fonts/open-sans-v20-latin-regular.woff") format("woff"), url("../resources/fonts/open-sans-v20-latin-regular.ttf") format("truetype"), url("../resources/fonts/open-sans-v20-latin-regular.svg#OpenSans") format("svg");
+  /* Legacy iOS */
 }
 
+/* open-sans-700 - latin */
 @font-face {
-  font-family: opensans-bold;
-  src: url("../resources/fonts/OpenSans-Bold.ttf");
+  font-family: 'Open Sans Bold';
+  font-style: normal;
+  font-weight: 700;
+  src: url("../resources/fonts/open-sans-v20-latin-700.eot");
+  /* IE9 Compat Modes */
+  src: url("../resources/fonts/open-sans-v20-latin-700.eot?#iefix") format("embedded-opentype"), url("../resources/fonts/open-sans-v20-latin-700.woff2") format("woff2"), url("../resources/fonts/open-sans-v20-latin-700.woff") format("woff"), url("../resources/fonts/open-sans-v20-latin-700.ttf") format("truetype"), url("../resources/fonts/open-sans-v20-latin-700.svg#OpenSans") format("svg");
+  /* Legacy iOS */
 }
 
 body {
-  font-family: opensans-regular;
-}
-
-.nav__list {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.nav__item {
-  float: left;
-  display: inline;
-}
-
-.nav__link {
-  display: block;
-  text-align: center;
+  font-family: 'Open Sans';
 }
 
 .header {
   width: 100%;
-  height: 60vh;
+  height: 50vh;
   margin-left: auto;
   margin-right: auto;
-  background-image: url("../resources/images/Harbor.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(71, 111, 223, 0.5)), to(rgba(71, 111, 223, 0.5))), url("../resources/images/Harbor.jpg");
+  background-image: linear-gradient(rgba(71, 111, 223, 0.5), rgba(71, 111, 223, 0.5)), url("../resources/images/Harbor.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
-.header__logo {
-  background-image: url("../resources/images/woman-helmet-work-electrician.jpg");
+.header__navbar {
+  font-family: 'Open Sans Bold';
+  color: white;
+  width: 100%;
+  padding: 2% 10% 0 10%;
+}
+
+.header__navbar ul {
+  list-style-type: none;
+}
+
+.header__navbar li {
+  float: left;
+  display: inline;
+}
+
+.header__navbar a, .header__navbar a:hover, .header__navbar a:focus, .header__navbar a:active {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+  text-align: left;
+}
+
+.header__navbar--logo {
+  width: 75px;
+  height: 75px;
+  float: left;
+}
+
+.header__navbar--logo img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: 100%;
+}
+
+.header__text {
+  width: 50%;
+  margin: 6% 0 0 10%;
+  color: white;
+}
+
+.header__text--title {
+  margin: 0 0 5% 0;
+}
+
+.header__text--body {
+  width: 70%;
+}
+
+.content {
+  width: 100%;
+  height: 250vh;
+  background-image: url("../resources/images/Visual.svg");
+}
+
+.content__about {
+  width: 100%;
+  height: 50vh;
+}
+
+@media only screen and (min-width: 501px) {
+  .content__about--img {
+    float: left;
+    width: 50%;
+    height: 100%;
+  }
+  .content__about--img img {
+    display: block;
+    margin: 25px auto 0 auto;
+    max-width: 80%;
+    max-height: 80%;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .content__about--img {
+    float: left;
+    width: 100%;
+    height: 50%;
+  }
+  .content__about--img img {
+    display: block;
+    float: right;
+    margin: auto;
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
+
+@media only screen and (min-width: 501px) {
+  .content__about--text {
+    float: right;
+    width: 50%;
+    height: 100%;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .content__about--text {
+    float: right;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.content__about--text--title {
+  width: 100%;
+  margin: 5% 0 1% 5%;
+  font-family: 'Open Sans Bold';
+  color: blue;
+  float: left;
+}
+
+.content__about--text--body {
+  width: 100%;
+  color: grey;
+  margin: 0% 0 0 5%;
+  text-align: left;
+  padding-right: 30%;
+  float: left;
+}
+
+.content__about--text--button {
+  width: 100%;
+}
+
+.content__about--text--button button {
+  width: 200px;
+  height: 50px;
+  margin: 3% 0 0 5%;
+}
+
+.content__services {
+  width: 100%;
+  height: 5%;
+}
+
+.content__services--title {
+  width: 100%;
+  font-family: 'Open Sans Bold';
+  color: blue;
+  margin: 1% 0 1% 5%;
+  float: left;
+}
+
+.content__services--body {
+  width: 100%;
+  color: grey;
+  margin: 0% 0 0 5%;
+  text-align: left;
+  padding-right: 30%;
+  float: left;
 }
 /*# sourceMappingURL=style.css.map */
