--- a/sass/style.css
+++ b/sass/style.css
@@ -26,7 +26,7 @@ body {
 
 .header {
   width: 100%;
-  height: 50vh;
+  height: 500px;
   margin-left: auto;
   margin-right: auto;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(71, 111, 223, 0.5)), to(rgba(71, 111, 223, 0.5))), url("../resources/images/Harbor.jpg");
@@ -38,9 +38,17 @@ body {
 
 .header__navbar {
   font-family: 'Open Sans Bold';
-  color: white;
-  width: 100%;
-  padding: 2% 10% 0 10%;
+  width: 80%;
+  margin: 0 10% 0 10%;
+  height: 75px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header__navbar ul {
@@ -48,7 +56,6 @@ body {
 }
 
 .header__navbar li {
-  float: left;
   display: inline;
 }
 
@@ -56,46 +63,97 @@ body {
   text-decoration: none;
   color: inherit;
   display: block;
-  text-align: left;
 }
 
-.header__navbar--logo {
-  width: 75px;
-  height: 75px;
-  float: left;
+.header__navbar nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
 }
 
 .header__navbar--logo img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 100%;
-  height: 100%;
+  width: 75px;
+  height: 75px;
+}
+
+.header__navbar .main-menu {
+  width: 70%;
+  float: left;
+}
+
+.header__navbar .main-menu ul {
+  color: white;
+  margin-left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 0;
+}
+
+.header__navbar .contact-menu {
+  float: right;
+}
+
+.header__navbar .contact-menu ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__navbar .contact-menu a {
+  color: white;
+}
+
+.header__navbar .contact-menu button {
+  background-color: white;
+  color: #3366ff;
 }
 
 .header__text {
-  width: 50%;
-  margin: 6% 0 0 10%;
+  width: auto;
+  margin: 100px 10% 0 10%;
   color: white;
 }
 
 .header__text--title {
-  margin: 0 0 5% 0;
+  color: white;
 }
 
-.header__text--body {
-  width: 70%;
+.header__text .line {
+  margin: 30px 0 30px 0;
+  width: 400px;
+  border: solid white 1px;
 }
 
 .content {
   width: 100%;
   height: 250vh;
+  margin: 50px 0px;
   background-image: url("../resources/images/Visual.svg");
 }
 
 .content__about {
   width: 100%;
-  height: 50vh;
+  height: 500px;
 }
 
 @media only screen and (min-width: 501px) {
@@ -107,8 +165,8 @@ body {
   .content__about--img img {
     display: block;
     margin: 25px auto 0 auto;
-    max-width: 80%;
-    max-height: 80%;
+    width: 80%;
+    height: 80%;
   }
 }
 
@@ -127,7 +185,11 @@ body {
   }
 }
 
-@media only screen and (min-width: 501px) {
+.content__about--text {
+  padding: 40px 20px 40px 80px;
+}
+
+@media only screen and (min-width: 701px) {
   .content__about--text {
     float: right;
     width: 50%;
@@ -135,7 +197,7 @@ body {
   }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 700px) {
   .content__about--text {
     float: right;
     width: 100%;
@@ -144,20 +206,16 @@ body {
 }
 
 .content__about--text--title {
-  width: 100%;
-  margin: 5% 0 1% 5%;
   font-family: 'Open Sans Bold';
-  color: blue;
-  float: left;
+  color: #3366ff;
+  margin-bottom: 40px;
 }
 
 .content__about--text--body {
-  width: 100%;
   color: grey;
-  margin: 0% 0 0 5%;
   text-align: left;
-  padding-right: 30%;
   float: left;
+  padding-bottom: 40px;
 }
 
 .content__about--text--button {
@@ -167,28 +225,26 @@ body {
 .content__about--text--button button {
   width: 200px;
   height: 50px;
-  margin: 3% 0 0 5%;
 }
 
 .content__services {
+  margin: 80px 0 0 0;
   width: 100%;
-  height: 5%;
+  height: auto;
 }
 
-.content__services--title {
-  width: 100%;
-  font-family: 'Open Sans Bold';
-  color: blue;
-  margin: 1% 0 1% 5%;
-  float: left;
+.content__services--img img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 75px;
+  height: 75px;
+  border: solid red 1px;
 }
 
-.content__services--body {
+.img-responsive {
+  max-width: 100%;
   width: 100%;
-  color: grey;
-  margin: 0% 0 0 5%;
-  text-align: left;
-  padding-right: 30%;
-  float: left;
+  height: auto;
 }
 /*# sourceMappingURL=style.css.map */
