--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,7 +30,7 @@ body{
 .header{
     
     width: 100%;
-    height: 50vh;
+    height: 500px;
     margin-left: auto;
     margin-right: auto;
     background-image: linear-gradient(rgba(71, 111, 223, 0.5), rgba(71, 111, 223, 0.5)), url('../resources/images/Harbor.jpg');
@@ -40,67 +40,109 @@ body{
 
     &__navbar{
         font-family: 'Open Sans Bold';
-        color: white;
-        
-
-        width: 100%;
-        padding: 2% 10% 0 10%;
+        width: 80%;
+        margin: 0 10% 0 10%;
+        height: 75px;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
         ul{
+
             list-style-type: none;
         }
 
         li{
-            float: left;
+
             display: inline;
         }
-
         a, a:hover, a:focus, a:active {
             text-decoration: none;
             color: inherit;
             display: block;
-            text-align: left;
         }
+        nav{
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            text-align: center;
+
+    
+
+        }
+
         
         &--logo{
-            width: 75px;
-            height: 75px;
-            float: left;
-
             img{
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
-                width: 100%;
-                height: 100%;
+                width: 75px;
+                height: 75px;
+    
+            }
+        }    
+        
+        .main-menu{
+            width: 70%;
+            float:left;
+            ul {
+                color: white;
+                margin-left: 0;
+                display: flex;
+                flex-wrap: wrap;
+                gap: 20px;
+                margin-bottom: 0;
+            }
 
+        }
+
+        .contact-menu{
+            float: right;
+            ul{
+                display: flex;
+                flex-wrap: wrap;
+                gap: 20px;
+                margin-bottom: 0;
+                align-items: center;
+            }
+            a{
+                color: white;
+            }
+
+            button{
+                background-color: white;
+                color: #3366ff;
             }
         }
+        
     }
+    
 
 
     &__text{
-        width: 50%;
-        margin: 6% 0 0 10%;
+        width: auto;
+        margin: 100px 10% 0 10%;
         color:white;
         &--title{
-            margin: 0 0 5% 0;
+            color: white;
         }
-
-        &--body{
-            width: 70%;
+        
+        .line{
+            margin: 30px 0 30px 0;
+            width: 400px;
+            border: solid white 1px;
         }
     }
 }
-
 .content{
     width:100%;
     height: 250vh;
-
+    margin: 50px 0px;
     background-image: url("../resources/images/Visual.svg");
 
     &__about{
         width:100%;
-        height: 50vh;
+        height: 500px;
 
         @media only screen and (min-width: 501px) {
             &--img{
@@ -110,8 +152,8 @@ body{
                 img{
                     display: block;
                     margin: 25px auto 0 auto;
-                    max-width: 80%;
-                    max-height: 80%;
+                    width: 80%;
+                    height: 80%;
                 }
     
                 
@@ -134,31 +176,28 @@ body{
             }
         }
         &--text{
-            @media only screen and (min-width: 501px) {
+            padding: 40px 20px 40px 80px;
+            @media only screen and (min-width: 701px) {
                 float: right;
                 width: 50%;
                 height: 100%;
             }
-            @media only screen and (max-width: 500px) {
+            @media only screen and (max-width: 700px) {
                 float: right;
                 width: 100%;
                 height: 100%;
             }
             &--title{
-                width:100%;
-                margin: 5% 0 1% 5%;
                 font-family: 'Open Sans Bold';
-                color: blue;
-                float: left;
+                color: #3366ff;
+                margin-bottom: 40px;
             }
         
             &--body{
-                width: 100%;
                 color: grey;
-                margin: 0% 0 0 5%;
                 text-align: left; 
-                padding-right: 30%;
                 float: left;
+                padding-bottom: 40px;
             }
     
             &--button{
@@ -168,7 +207,6 @@ body{
                 button{
                     width: 200px;
                     height: 50px;
-                    margin: 3% 0 0 5%;
                 }
                 
             }
@@ -178,27 +216,29 @@ body{
  
 
     &__services{
+        margin: 80px 0 0 0;
         width: 100%;
-        height: 5%;
+        height: auto;
 
-        &--title{
-            width:100%;
-            font-family: 'Open Sans Bold';
-            color: blue;
-            margin: 1% 0 1% 5%;
-            float: left;
+        &--img{
+            img{
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                width: 75px;
+                height: 75px;
+                border: solid red 1px;
+            }
         }
+        &--title{
 
-        &--body{
-            width: 100%;
-            color: grey;
-            margin: 0% 0 0 5%;
-            text-align: left; 
-            padding-right: 30%;
-            float: left;
         }
     }
 }
 
 
-
+.img-responsive {
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+}
