--- a/sass/style.css
+++ b/sass/style.css
@@ -22,22 +22,23 @@
 
 body {
   font-family: 'Open Sans';
+  line-height: 25px;
 }
 
 .header {
   width: 100%;
-  height: 500px;
+  min-height: 500px;
+  height: auto;
   margin-left: auto;
   margin-right: auto;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(71, 111, 223, 0.5)), to(rgba(71, 111, 223, 0.5))), url("../resources/images/Harbor.jpg");
-  background-image: linear-gradient(rgba(71, 111, 223, 0.5), rgba(71, 111, 223, 0.5)), url("../resources/images/Harbor.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(16, 66, 206, 0.5)), to(rgba(16, 66, 206, 0.5))), url("../resources/images/Harbor.jpg");
+  background-image: linear-gradient(rgba(16, 66, 206, 0.5), rgba(16, 66, 206, 0.5)), url("../resources/images/Harbor.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
 .header__navbar {
-  font-family: 'Open Sans Bold';
   width: 80%;
   margin: 0 10% 0 10%;
   height: 75px;
@@ -125,12 +126,13 @@ body {
 
 .header__navbar .contact-menu button {
   background-color: white;
-  color: #3366ff;
+  color: #1658C8;
 }
 
 .header__text {
   width: auto;
-  margin: 100px 10% 0 10%;
+  min-width: 90%;
+  margin: 75px 50% 0 0;
   color: white;
 }
 
@@ -146,14 +148,13 @@ body {
 
 .content {
   width: 100%;
-  height: 250vh;
+  height: auto;
   margin: 50px 0px;
   background-image: url("../resources/images/Visual.svg");
 }
 
 .content__about {
   width: 100%;
-  height: 500px;
 }
 
 @media only screen and (min-width: 501px) {
@@ -207,12 +208,12 @@ body {
 
 .content__about--text--title {
   font-family: 'Open Sans Bold';
-  color: #3366ff;
+  color: #1658C8;
   margin-bottom: 40px;
 }
 
 .content__about--text--body {
-  color: grey;
+  color: #828282;
   text-align: left;
   float: left;
   padding-bottom: 40px;
@@ -228,23 +229,185 @@ body {
 }
 
 .content__services {
-  margin: 80px 0 0 0;
-  width: 100%;
-  height: auto;
+  margin-top: 50px;
+}
+
+.content__services--img {
+  margin-top: 50px;
 }
 
 .content__services--img img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 75px;
-  height: 75px;
-  border: solid red 1px;
+  width: 32px;
+  height: 32px;
+}
+
+.content__services--service {
+  padding: 0 7% 0 7%;
+}
+
+.content__services--title {
+  font-family: 'Open Sans Bold';
+  height: 50px;
+  margin: 10px 0 40px 0;
+}
+
+.content__services--text {
+  width: 100%;
+  color: #828282;
+}
+
+.content__services--moreinfo {
+  margin: 40px 0 100px 0;
+  color: #1658C8;
+}
+
+.news {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(20, 20, 204, 0.77)), to(rgba(20, 20, 204, 0.77))), url("../resources/images/harbour-boat-sea-plane.jpg");
+  background-image: linear-gradient(rgba(20, 20, 204, 0.77), rgba(20, 20, 204, 0.77)), url("../resources/images/harbour-boat-sea-plane.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 40px 0 40px 0;
+}
+
+.news .newsbox .title {
+  color: white;
+  margin: 0 0 40px 0;
+}
+
+.news .newsbox .item {
+  background-color: white;
+  font-size: 12px;
+  height: auto;
+}
+
+.news .newsbox .item__img {
+  width: 100%;
+  height: 160px;
+  position: relative;
+}
+
+.news .newsbox .item__img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center center;
+     object-position: center center;
+  width: 100%;
+  height: 100%;
+}
+
+.news .newsbox .item__text {
+  margin: 10px;
+  font-size: 16px;
+}
+
+@media only screen and (max-width: 768px) {
+  .news .newsbox .item__text--textdate {
+    color: #828282;
+  }
+  .news .newsbox .item__text--texttitle {
+    font-weight: bold;
+  }
+  .news .newsbox .item__text--textcontent {
+    padding-bottom: 50px;
+  }
+  .news .newsbox .item__text--textread {
+    font-weight: bolder;
+    color: #1658C8;
+  }
+}
+
+@media only screen and (min-width: 769px) {
+  .news .newsbox .item__text--textdate {
+    color: #828282;
+  }
+  .news .newsbox .item__text--texttitle {
+    font-weight: bold;
+    height: 50px;
+  }
+  .news .newsbox .item__text--textcontent {
+    padding-bottom: 5px;
+  }
+  .news .newsbox .item__text--textread {
+    padding-bottom: 10px;
+    font-weight: bolder;
+    color: #1658C8;
+  }
+}
+
+.testimonials {
+  height: 100%;
+  width: 100%;
+  color: #828282;
+  text-align: center;
+}
+
+.testimonials .text {
+  font-weight: bolder;
+  text-align: center;
+  font-size: 16px;
+  margin: 80px 20% 0 20%;
+}
+
+.testimonials .author {
+  margin: 0 20% 0 20%;
+  text-align: center;
+  font-size: 16px;
+}
+
+.splide__pagination {
+  margin: 0 0 0 0;
+}
+
+.splide__pagination__page {
+  background-color: #B8CAF4;
+}
+
+.splide__pagination .is-active {
+  background-color: #1658C8;
 }
 
 .img-responsive {
   max-width: 100%;
   width: 100%;
   height: auto;
+}
+
+.img-icon {
+  width: 32px;
+  height: 32px;
+}
+
+.footer {
+  font-size: 13px;
+  padding-top: 10%;
+  color: #828282;
+  margin-bottom: 24px;
+}
+
+.footer .companyname {
+  padding-right: 20%;
+}
+
+.footer .line {
+  margin: 30px 0 30px 0;
+  width: 100%;
+  border: solid #828282 1px;
+}
+
+.footer .icon {
+  float: right;
+  margin-right: 24px;
+  width: 24px;
+  height: 24px;
+}
+
+.title {
+  color: #1658C8;
+  font-family: Open Sans Bold;
+}
+
+.text {
+  color: #828282;
 }
 /*# sourceMappingURL=style.css.map */
