--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,9 @@
+$clr-blue-1: #B8CAF4;
+$clr-blue-2: #1658C8;
+
+$clr-grey-1: #828282;
+
+
 /* open-sans-regular - latin */
 @font-face {
     font-family: 'Open Sans';
@@ -24,22 +30,24 @@
 }
 
 body{
+
     font-family: 'Open Sans';
+    line-height: 25px;
 }
 
 .header{
     
     width: 100%;
-    height: 500px;
+    min-height: 500px;
+    height: auto;
     margin-left: auto;
     margin-right: auto;
-    background-image: linear-gradient(rgba(71, 111, 223, 0.5), rgba(71, 111, 223, 0.5)), url('../resources/images/Harbor.jpg');
+    background-image: linear-gradient(rgba(16, 66, 206, 0.5), rgba(16, 66, 206, 0.5)), url('../resources/images/Harbor.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 
     &__navbar{
-        font-family: 'Open Sans Bold';
         width: 80%;
         margin: 0 10% 0 10%;
         height: 75px;
@@ -111,7 +119,7 @@ body{
 
             button{
                 background-color: white;
-                color: #3366ff;
+                color: $clr-blue-2;
             }
         }
         
@@ -121,7 +129,8 @@ body{
 
     &__text{
         width: auto;
-        margin: 100px 10% 0 10%;
+        min-width: 90%;
+        margin: 75px 50% 0 0;
         color:white;
         &--title{
             color: white;
@@ -136,13 +145,12 @@ body{
 }
 .content{
     width:100%;
-    height: 250vh;
+    height: auto;
     margin: 50px 0px;
     background-image: url("../resources/images/Visual.svg");
 
     &__about{
         width:100%;
-        height: 500px;
 
         @media only screen and (min-width: 501px) {
             &--img{
@@ -189,12 +197,12 @@ body{
             }
             &--title{
                 font-family: 'Open Sans Bold';
-                color: #3366ff;
+                color: $clr-blue-2;
                 margin-bottom: 40px;
             }
         
             &--body{
-                color: grey;
+                color: $clr-grey-1;
                 text-align: left; 
                 float: left;
                 padding-bottom: 40px;
@@ -216,29 +224,189 @@ body{
  
 
     &__services{
-        margin: 80px 0 0 0;
-        width: 100%;
-        height: auto;
-
+        margin-top: 50px;
         &--img{
+            margin-top: 50px;
             img{
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-                width: 75px;
-                height: 75px;
-                border: solid red 1px;
+                width: 32px;
+                height: 32px;
             }
         }
+        &--service{
+
+            padding: 0 7% 0 7%;
+            
+        }
         &--title{
+            font-family: 'Open Sans Bold';
+            height: 50px;
+            margin: 10px 0 40px 0;
+        }
+
+        &--text{
+            width: 100%;
+            color: $clr-grey-1;
+        }
+
+        &--moreinfo{
+            margin: 40px 0 100px 0;
+            color: $clr-blue-2;
+        }
+        
+        
+    }
+}
+.news{
+    background-image: linear-gradient(rgba(20, 20, 204, 0.77), rgba(20, 20, 204, 0.77)), url('../resources/images/harbour-boat-sea-plane.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 40px 0 40px 0;
+
+    .newsbox{
+        .title{
+            color: white;
+            margin: 0 0 40px 0;
+        }
+        
+    
+        .item{
+            background-color: white;
+            font-size: 12px;
+            height: auto;
+            // width: 260px;
+
+            &__img{
+                width: 100%;
+                height: 160px;
+                position: relative;
+                    img {
+                        object-fit: cover;
+                        object-position: center center;
+                        width: 100%;
+                        height: 100%;
+                    }
+            }
+            &__text{
+                margin: 10px;
+                font-size: 16px;
+                @media only screen and (max-width: 768px){
+                    &--textdate{
+                        color: $clr-grey-1;
+                    }
+        
+                    &--texttitle{
+                        font-weight: bold;
+                    }
+                    &--textcontent{
+                        padding-bottom: 50px;
+                    }
+                    &--textread{
+                        font-weight: bolder;
+                        color: $clr-blue-2;
+                    }
+                }
+                @media only screen and (min-width: 769px){
+                    &--textdate{
+                        color: $clr-grey-1;
+                    }
+        
+                    &--texttitle{
+                        font-weight: bold;
+                        height: 50px;
+                    }
+                    &--textcontent{
+                        padding-bottom: 5px;
+                    }
+                    &--textread{
+                        padding-bottom: 10px;
+                        font-weight: bolder;
+                        color: $clr-blue-2;
+                    }
+                }
+                
+            }
 
         }
     }
+    
 }
+.testimonials{
+    height: 100%;
+    width: 100%;
+    color: $clr-grey-1;
+    text-align: center;
+    .text{
+        font-weight: bolder;
+        text-align: center;
+        font-size: 16px;
+        margin: 80px 20% 0 20%;
+    }
+    .author{
+        margin: 0 20% 0 20%;
+        text-align: center;
+        font-size: 16px;
+    }
 
+    
 
+}
+.splide {
+    &__pagination {
+        margin: 0 0 0 0;
+        &__page {
+            background-color: $clr-blue-1;
+        }
+        .is-active {
+            background-color: $clr-blue-2;
+        }
+    }
+
+}
 .img-responsive {
     max-width: 100%;
     width: 100%;
     height: auto;
+}
+
+.img-icon{
+    width: 32px;
+    height: 32px;
+}
+
+
+.footer{
+    font-size: 13px;
+    padding-top: 10%;
+    color: $clr-grey-1;
+    margin-bottom: 24px;
+    .companyname{
+        padding-right: 20%;
+    }
+
+    .line{
+        margin: 30px 0 30px 0;
+        width: 100%;
+        border: solid $clr-grey-1 1px;
+    }
+    .socials{
+
+    }
+
+    .icon{
+        float: right;
+        margin-right: 24px;
+        width: 24px;
+        height: 24px;
+    }
+    
+}
+
+.title{
+    color: $clr-blue-2;
+    font-family: Open Sans Bold;
+}
+
+.text{
+    color: $clr-grey-1;
 }
