--- a/sass/style.css
+++ b/sass/style.css
@@ -38,9 +38,13 @@ body {
   background-position: center;
 }
 
+@media only screen and (max-width: 991px) {
+  .header__navbar {
+    display: none !important;
+  }
+}
+
 .header__navbar {
-  width: 80%;
-  margin: 0 10% 0 10%;
   height: 75px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -75,7 +79,6 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  text-align: center;
 }
 
 .header__navbar--logo img {
@@ -86,12 +89,8 @@ body {
   height: 75px;
 }
 
-.header__navbar .main-menu {
-  width: 70%;
-  float: left;
-}
-
 .header__navbar .main-menu ul {
+  text-align: center;
   color: white;
   margin-left: 0;
   display: -webkit-box;
@@ -103,11 +102,10 @@ body {
   margin-bottom: 0;
 }
 
-.header__navbar .contact-menu {
-  float: right;
-}
-
 .header__navbar .contact-menu ul {
+  text-align: center;
+  color: white;
+  margin-left: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -115,12 +113,10 @@ body {
       flex-wrap: wrap;
   gap: 20px;
   margin-bottom: 0;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .header__navbar .contact-menu a {
+  margin-top: 10px;
   color: white;
 }
 
@@ -142,8 +138,82 @@ body {
 
 .header__text .line {
   margin: 30px 0 30px 0;
-  width: 400px;
+  width: 50%;
   border: solid white 1px;
+}
+
+@media only screen and (min-width: 992px) {
+  .mobile-navbar {
+    display: none !important;
+  }
+}
+
+.mobile-navbar {
+  right: 0px;
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #1658C8 !important;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -ms-flex-line-pack: end;
+      align-content: flex-end;
+}
+
+.mobile-navbar .dot {
+  background-color: #1658C8;
+  border-radius: 25%;
+  display: inline-block;
+}
+
+.mobile-navbar .mobile-menu-button {
+  margin: 30px;
+  text-align: right;
+  color: white;
+}
+
+.mobile-navbar .mobile-menu {
+  display: none;
+  height: auto;
+  color: white;
+  text-align: right;
+  margin: 0 30px 0 0;
+}
+
+.mobile-navbar .mobile-menu a, .mobile-navbar .mobile-menu a:hover, .mobile-navbar .mobile-menu a:focus, .mobile-navbar .mobile-menu a:active {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+}
+
+.mobile-navbar .mobile-menu ul li {
+  list-style-type: none;
+  list-style-position: inside;
+  margin: 0;
+  padding: 0 0 10px 0;
+}
+
+.mobile-navbar .mobile-menu .mobile-menu-main-nav {
+  width: 100%;
+}
+
+.mobile-navbar .hamburger {
+  padding-bottom: 10px;
+}
+
+.mobile-menu-active {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
 }
 
 .content {
@@ -190,19 +260,17 @@ body {
   padding: 40px 20px 40px 80px;
 }
 
-@media only screen and (min-width: 701px) {
+@media only screen and (min-width: 769px) {
   .content__about--text {
     float: right;
     width: 50%;
-    height: 100%;
   }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 768px) {
   .content__about--text {
     float: right;
     width: 100%;
-    height: 100%;
   }
 }
 
@@ -219,11 +287,17 @@ body {
   padding-bottom: 40px;
 }
 
-.content__about--text--button {
+.content__about--button {
   width: 100%;
 }
 
-.content__about--text--button button {
+@media only screen and (max-width: 992px) {
+  .content__about--button {
+    text-align: center;
+  }
+}
+
+.content__about--button button {
   width: 200px;
   height: 50px;
 }
@@ -272,7 +346,7 @@ body {
 
 .news .newsbox .title {
   color: white;
-  margin: 0 0 40px 0;
+  margin-bottom: 40px;
 }
 
 .news .newsbox .item {
