--- a/sass/style.scss
+++ b/sass/style.scss
@@ -35,8 +35,8 @@ body{
     line-height: 25px;
 }
 
+
 .header{
-    
     width: 100%;
     min-height: 500px;
     height: auto;
@@ -47,9 +47,14 @@ body{
     background-size: cover;
     background-position: center;
 
+    @media only screen and (max-width: 991px) {
+        &__navbar{
+            display: none !important;
+        }
+    }
+    
+
     &__navbar{
-        width: 80%;
-        margin: 0 10% 0 10%;
         height: 75px;
         display: flex;
         flex-wrap: wrap;
@@ -72,7 +77,6 @@ body{
             display: flex;
             flex-wrap: wrap;
             align-items: center;
-            text-align: center;
 
     
 
@@ -91,9 +95,8 @@ body{
         }    
         
         .main-menu{
-            width: 70%;
-            float:left;
             ul {
+                text-align: center;
                 color: white;
                 margin-left: 0;
                 display: flex;
@@ -105,15 +108,17 @@ body{
         }
 
         .contact-menu{
-            float: right;
-            ul{
+            ul {
+                text-align: center;
+                color: white;
+                margin-left: 0;
                 display: flex;
                 flex-wrap: wrap;
                 gap: 20px;
                 margin-bottom: 0;
-                align-items: center;
             }
             a{
+                margin-top: 10px;
                 color: white;
             }
 
@@ -124,6 +129,8 @@ body{
         }
         
     }
+
+    
     
 
 
@@ -138,11 +145,72 @@ body{
         
         .line{
             margin: 30px 0 30px 0;
-            width: 400px;
+            width: 50%;
             border: solid white 1px;
         }
     }
 }
+@media only screen and (min-width: 992px) {
+    .mobile-navbar{
+        display: none !important;
+    }
+}
+.mobile-navbar{
+    right: 0px;
+    position: fixed;
+    display: flex;
+    flex-wrap: wrap;
+    width: auto;
+    flex-direction: column;
+    background-color: #1658C8 !important;
+    justify-content: flex-end;
+    align-content: flex-end;
+
+    .dot{
+        background-color: $clr-blue-2;
+        border-radius: 25%;
+        display: inline-block;
+    }
+    .mobile-menu-button{
+        margin: 30px;
+        text-align: right;
+        color: white;
+    }
+    .mobile-menu{
+        display: none;
+        height: auto;
+        color: white;
+        text-align: right;
+        margin: 0 30px 0 0;
+        a, a:hover, a:focus, a:active {
+            text-decoration: none;
+            color: inherit;
+            display: block;
+        }
+        ul li{
+            list-style-type: none;
+            list-style-position:inside;
+            margin:0;
+            padding:0 0 10px 0;
+        }
+        .mobile-menu-main-nav{
+            width: 100%;
+        }
+
+    }
+    .hamburger{
+        padding-bottom: 10px;
+    }
+}
+
+
+.mobile-menu-active{
+    display: flex !important;
+    
+}
+
+
+
 .content{
     width:100%;
     height: auto;
@@ -185,15 +253,15 @@ body{
         }
         &--text{
             padding: 40px 20px 40px 80px;
-            @media only screen and (min-width: 701px) {
+            @media only screen and (min-width: 769px) {
                 float: right;
                 width: 50%;
-                height: 100%;
+
             }
-            @media only screen and (max-width: 700px) {
+            @media only screen and (max-width: 768px) {
                 float: right;
                 width: 100%;
-                height: 100%;
+
             }
             &--title{
                 font-family: 'Open Sans Bold';
@@ -207,17 +275,23 @@ body{
                 float: left;
                 padding-bottom: 40px;
             }
-    
-            &--button{
+        }
+        &--button{
                 
-                width: 100%;
-
-                button{
-                    width: 200px;
-                    height: 50px;
-                }
-                
+            width: 100%;
+            @media only screen and (min-width: 993px) {
+                    
             }
+            @media only screen and (max-width: 992px) {
+                text-align: center;
+            }
+
+            button{
+
+                width: 200px;
+                height: 50px;
+            }
+            
         }
         
     }
@@ -266,7 +340,7 @@ body{
     .newsbox{
         .title{
             color: white;
-            margin: 0 0 40px 0;
+            margin-bottom: 40px;
         }
         
     
