--- a/sass/style.scss
+++ b/sass/style.scss
@@ -55,6 +55,19 @@ body{
     margin-bottom: -25px;
 
 }
+.scrollbutton:hover{
+    width: 50px;
+    height:50px;
+    margin: 0px auto;
+    border: solid white 2px;
+    background-color: $clr-blue-2;
+    border-radius: 50%;
+    box-shadow: 2px 2px 4px #000000;
+    margin-bottom: -25px;
+    i{
+        color: white;
+    }
+}
 
 .header{
     width: 100%;
@@ -75,11 +88,19 @@ body{
     }
 
     .contact-button{
-        border: 1px solid white;
+        border: 3px solid white;
         width: 150px;
         border-radius: 30px;
         background-color: white;
         color: $clr-blue-2 !important;
+        
+    }
+    .contact-button:hover{
+        border: 3px solid white;
+        width: 150px;
+        border-radius: 30px;
+        background-color: $clr-blue-2;
+        color: white !important;
     }
     &__navbar{
         height: 75px;
@@ -154,9 +175,6 @@ body{
         
     }
 
-    
-    
-
 
     &__text{
         width: auto;
@@ -182,24 +200,21 @@ body{
 .mobile-navbar{
     z-index: 2;
     position: fixed;
-
+    transition: all 500ms linear;
     width: 100%;
     height: 61px;
     flex-direction: column;
-    background-color:$clr-blue-2 !important;
+    //background-color:$clr-blue-2 !important;
     justify-content: flex-end;
     align-content: space-between;
 
-    .mobile-navbar-top{
-        width:100%;
-        height: 61px;
-    }
     .contact-button{
         border: 1px solid white;
         width: 150px;
         border-radius: 30px;
         background-color: white;
         text-align: center;
+        margin: 0px auto;
         color: $clr-blue-2 !important;
     }
 
@@ -209,21 +224,28 @@ body{
         display: inline-block;
     }
     .mobile-menu-button{
-        //margin: 20px 20px 20px 0;
+        padding-right: 20px;
         text-align: right;
         color: white;
+        width:100%;
+        height: 100%;
     }
     .mobile-menu{
+        border: 1px $clr-blue-2 solid;
+        border-radius: 0 0 0 20px;
         user-select: none;
         pointer-events: none;
+        float: right;
         opacity: 0;
         top: 61px;
-        width: 33%;
+        width: auto;
         height: auto;
         color: white;
         background-color: $clr-blue-2;
         text-align: right;
-        padding: 20px;
+        padding: 0 20px 20px 20px;
+        transform: translateX(100%);
+        transition: all 400ms cubic-bezier(0.55, 0, 0.1, 1);
         a, a:hover, a:focus, a:active {
             text-decoration: none;
             color: inherit;
@@ -235,10 +257,6 @@ body{
             list-style-position:inside;
 
         }
-        .mobile-menu-main-nav{
-            width: 100%;
-        }
-
         li{
             border-top: 2px solid white;
         }
@@ -246,14 +264,29 @@ body{
     .hamburger{
         padding-bottom: 10px;
     }
+    .hamburger:hover{
+        opacity: 1;
+    }
+    .mobile-navbar-top{
+        transform: translateY(100%);
+        transition: all 400ms cubic-bezier(0.55, 0, 0.1, 1);
+    }
+
+    
 }
 
 
 .mobile-menu-active{
-    //display: flex !important;
-    opacity: 1 !important;
-    user-select: all !important;
-    pointer-events: all !important;
+    .mobile-menu{
+        opacity: 1 !important;
+        user-select: all !important;
+        pointer-events: all !important;
+        transform: translateX(0%);
+    }
+    .mobile-navbar-top{
+        background-color: $clr-blue-2 !important;
+        transform: translateY(0%);
+    }
     
 }
 
@@ -338,9 +371,17 @@ body{
             }
 
             .getstarted{
-                border: 10px solid $clr-blue-2;
+                border: 3px solid $clr-blue-2;
                 border-radius: 30px;
                 background-color: $clr-blue-2;
+                padding: 5px 100px 5px 100px;
+            
+            }
+            .getstarted:hover{
+                border: 3px solid $clr-blue-2;
+                border-radius: 30px;
+                background-color: white;
+                color: $clr-blue-2;
                 padding: 5px 100px 5px 100px;
             }
             
@@ -537,11 +578,15 @@ body{
     .companyname{
         padding-right: 20%;
     }
+    .title{
+        color: $clr-blue-2;
+        padding-bottom: 20px;
+    }
 
     .line{
         margin: 30px 0 30px 0;
         width: 100%;
-        border: solid $clr-grey-1 1px;
+        border: solid #b9b9b9 1px;
     }
 
     .icon{
